# lclstream

./: README.md  pyproject.toml
lclstream/: lclstream.py  zmqsock.py
tests/: test_sendrecv.py
